--- a/WebApplication3/Views/AparatKategoria/Index.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "List";
 }
 
-<h1>List</h1>
+<h1 class="bg-info text-white">List</h1>
 
 <p>
-    <a asp-action="Create">Create</a>
+    <a class="btn btn-secondary"  asp-action="Create">Create</a>
 </p>
 <table class="table">
     <thead>
