--- a/WebApplication3/Views/Home/Aparaty_historia.cshtml
+++ b/WebApplication3/Views/Home/Aparaty_historia.cshtml
@@ -7,7 +7,14 @@
         <h4>Here, You'll learn some things on the subject</h4>
     </div>
 }
+@section PageFoot{
+    <div>
+        <h5>If You are interested in more information</h5>
+        <h6>Write to <a href="mailto:name@email.com">our e-mail address</a></h6>
+        <h6>Call <em>+48 555-555-555</em></h6>
+    </div>
 
+}
 <div class="text-center">
     <h2 class="display-4">@ViewData["Title"]</h2>
     <h5>A bunch of facts...</h5>
