--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
     </div>
 }
 @section PageFoot{
-    <div class="container">
-        <h4>If You are interested in more information</h4>
-        <h5>Write to <a href="mailto:name@email.com">our e-mail address</a></h5>
-        <h5>Call <em>+48 555-555-555</em></h5>
+    <div >
+        <h5>If You are interested in more information</h5>
+        <h6>Write to <a href="mailto:name@email.com">our e-mail address</a></h6>
+        <h6>Call <em>+48 555-555-555</em></h6>
     </div>
 }
 <div class="text-center">
