--- a/WebApplication3/Views/EquipmentBag/Index.cshtml
+++ b/WebApplication3/Views/EquipmentBag/Index.cshtml
@@ -5,7 +5,7 @@
 
 @{ ViewBag.Title = "Contents of the bag"; }
 
-<h2>@ViewBag.Title</h2>
+<h1 class="bg-info text-white">@ViewBag.Title</h1>
 
 <p>     Amount of equipment: @Model.TotalAmount()</p>
 
