--- a/WebApplication3/wwwroot/css/site.css
+++ b/WebApplication3/wwwroot/css/site.css
@@ -124,6 +124,8 @@ div#calculator {
     background-color: rgba(111, 111, 111, 0.5);
 }
 #navbar .nav-item:hover {
+    transition: 0s border;
+    transition-delay: 0.25s;
     border-top: 1px solid white;
     border-left: 1px solid white;
     border-bottom: 1px solid black;
@@ -145,5 +147,19 @@ div#calculator {
     background-size: contain;
     width: 100%;
     height: 100%;
+}
+.mainContent {
+    min-height: 50%;
+    overflow: auto !important;
+    display: inline-block;
+}
+.footerContent {
+    max-height: 20%;
+    height: 10%;
+}
 
+
+.check-box {
+    width: 1.5em;
+    height: 1.5em;
 }
