regex and styling

--- a/WebApplication3/Views/AparatViewModel/Details.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Details.cshtml
@@ -62,6 +62,7 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back To List</a>
-    <a asp-controller="AparatKategoria" asp-action="Menu">Back to categories</a>
+    <a asp-action="Index">Back To List</a> |
+    <a asp-controller="AparatKategoria" asp-action="Menu">Back to categories</a> |
+    @Html.ActionLink("Add To Bag", "AddAparatToEquipmentBag", "EquipmentBag", new { id = Model.Id })
 </div>
