--- a/WebApplication3/Views/AparatKategoria/Index.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Index.cshtml
@@ -1,13 +1,18 @@
 ﻿@model IEnumerable<WebApplication3.Models.AparatKategoria>
 
 @{
-    ViewData["Title"] = "List";
+    ViewData["Title"] = "Camera Category List";
 }
 
+@section PageHead{
+    <div class="container">
+        <h3>Hello, this is @ViewData["Title"]</h3>
+        <h4>Here, You can see all camera categories currently in the database and administrate them</h4>
+    </div>}
 <h1 class="bg-info text-white">List</h1>
 
 <p>
-    <a class="btn btn-secondary"  asp-action="Create">Create</a>
+    <a class="btn btn-secondary" asp-action="Create">Create</a>
 </p>
 <table class="table">
     <thead>
@@ -22,20 +27,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpperCategory.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UpperCategory.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
