--- a/WebApplication3/Views/Bagnets/Index.cshtml
+++ b/WebApplication3/Views/Bagnets/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@model IEnumerable<WebApplication3.Models.Bagnet>
 
 @{
-    ViewData["Title"] = "List";
+    ViewData["Title"] = "Mount List";
 }
-
+@section PageHead{
+    <div class="container">
+        <h3>Hello, this is @ViewData["Title"]</h3>
+        <h4>Here, You can see all mount types currently in the database and administrate them</h4>
+    </div>}
 <h1 class="bg-info text-white">List</h1>
 
 <p>
@@ -19,17 +23,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Typ)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Typ)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
