--- a/WebApplication3/Views/AparatKategoria/Create.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Create.cshtml
@@ -23,6 +23,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <span>@ViewBag.DuplicateMessage</span>
             </div>
         </form>
     </div>
