--- a/WebApplication3/Views/AparatViewModel/Delete.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>AparatViewModel</h4>
+    <h4>Camera</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
